--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -6,8 +6,8 @@ VUE_APP_BACK_API_SERVER=http://localhost:3730
 #VUE_APP_BACK_API_FS=/order/fs
 #VUE_APP_BACK_API_PLUGIN=/order/plugin
 VUE_APP_USER_ROLE=sale
-VUE_APP_TAGS='editor'
-VUE_APP_DEFAULT_TAG='list'
+#VUE_APP_TAGS='editor'
+#VUE_APP_DEFAULT_TAG='list'
 
 # 仅用于开发环境测试
 VUE_APP_BACK_API_BASE=http://localhost:3730/order/api
