--- a/ue_mongo/.env
+++ b/ue_mongo/.env
@@ -14,8 +14,10 @@ VUE_APP_BACK_API_PLUGIN='/order/plugin'
 VUE_APP_BACK_API_FS='/order/fs'
 VUE_APP_BACK_API_SERVER='http://localhost:3630'
 
+# doc editor 
+VUE_APP_PLUGINS_DOCEDITOR_ADD=['generateOrderId', 'fillingZero']
+VUE_APP_PLUGINS_DOCEDITOR_MODIFY=['fillingZero']
+VUE_APP_FILLINGZERO_FIELD='dismoney_a_yly, dismoney_b_yly, dismoney_c_yly, dismoney_d_yly, dismoney_e_yly, dismoney_f_yly, disovermoney_yly, dismoney_time_yly, discost_month_gzh, dismoney_a_gzh, dismoney_b_gzh, dismoney_c_gzh, dismoney_d_gzh, dismoney_e_gzh, dismoney_f_gzh, dismoney_time_gzh, disovermoney_gzh, discost_call_gzh, discost_msg_gzh, discostmonth_yzj, discostcall_yzj'
+
 # 多租户模式
 VUE_APP_TMW_REQUIRE_BUCKET=
-
-# 提交信息
-VUE_APP_SUBMIT_VALITOR_FIELD='dismoney_a_yly, dismoney_b_yly, dismoney_c_yly, dismoney_d_yly, dismoney_e_yly, dismoney_f_yly, disovermoney_yly, dismoney_time_yly, discost_month_gzh, dismoney_a_gzh, dismoney_b_gzh, dismoney_c_gzh, dismoney_d_gzh, dismoney_e_gzh, dismoney_f_gzh, dismoney_time_gzh, disovermoney_gzh, discost_call_gzh, discost_msg_gzh, discostmonth_yzj, discostcall_yzj'
