--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -9,6 +9,9 @@ VUE_APP_USER_ROLE=sale
 #VUE_APP_TAGS='editor'
 #VUE_APP_DEFAULT_TAG='list'
 
+# doc editor 
+VUE_APP_PLUGINS_DOCEDITOR_MODIFY=['defineAuditStatus', 'fillingZero']
+
 # 仅用于开发环境测试
 VUE_APP_BACK_API_BASE=http://localhost:3730/order/api
 VUE_APP_BACK_API_FS=http://localhost:3730/order/fs
