1015修改插件的环境变量

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,19 +1,19 @@
 version: '3.7'
 services:
-    omongodb:
-      volumes:
-        - /home/devops/mongodata/order:/data/db
-      ports:
-        - '27013:27017'
-      logging:
-        driver: 'none'
-      networks:
-        - portal
+  omongodb:
+    volumes:
+      - /home/devops/mongodata/order:/data/db
+    ports:
+      - '27013:27017'
+    logging:
+      driver: 'none'
+    networks:
+      - portal
 
-    back:
-      ports:
-        - '3650:3000'
-      environment:
+  back:
+    ports:
+      - '3650:3000'
+    environment:
       - TMS_REDIS_PREFIX=dev-op
       - TMS_REDIS_HOST=192.168.20.247
       - TMS_REDIS_PORT=6300
@@ -22,56 +22,56 @@ services:
       - TMS_MONGODB_USER=root
       - TMS_MONGODB_PASSWORD=password
       - TMS_HTTP_ACCEPTCRM_URL=["."]
-      - TRUSTIPS_PLUGIN_IT_IPS=["192.168.20.248"]
+      - TRUSTIPS_PLUGIN_IT_IPS=[""]
       - TMS_PLUGINS_IP=http://192.168.20.248:80
-      networks:
+    networks:
       - portal
 
-    admin:
-      build: 
-        context: .
-        args:
-          vue_app_back_auth_server: http://192.168.20.71:3330
-          vue_app_back_api_server: http://back:3650
-      environment: 
-        NODE_ENV: production
-      ports:
-        - '3640:80'
-      dns: 
-        - 223.6.6.6
-        - 223.5.5.5
-      networks:
+  admin:
+    build:
+      context: .
+      args:
+        vue_app_back_auth_server: http://192.168.20.71:3330
+        vue_app_back_api_server: http://back:3650
+    environment:
+      NODE_ENV: production
+    ports:
+      - '3640:80'
+    dns:
+      - 223.6.6.6
+      - 223.5.5.5
+    networks:
       - portal
-   
-    mongo:
-      build: 
-        context: .
-        args:
-          vue_app_back_auth_server: http://oauth
-#          vue_app_back_api_server: http://back:3650
-      environment: 
-        NODE_ENV: production
-      ports:
-        - '3630:80'
-      dns:
-        - 223.6.6.6
-        - 223.5.5.5
-      networks:
-        - portal
 
-    sale:
-      build: 
-        context: .
-        args:
-          vue_app_back_auth_server: http://192.168.20.71:3330
-          vue_app_back_api_server: http://back:3650
-      ports:
-        - '3660:80'
-      dns:
-        - 223.6.6.6
-        - 223.5.5.5
-      networks:
-        - portal
+  mongo:
+    build:
+      context: .
+      args:
+        vue_app_back_auth_server: http://oauth
+    #          vue_app_back_api_server: http://back:3650
+    environment:
+      NODE_ENV: production
+    ports:
+      - '3630:80'
+    dns:
+      - 223.6.6.6
+      - 223.5.5.5
+    networks:
+      - portal
+
+  sale:
+    build:
+      context: .
+      args:
+        vue_app_back_auth_server: http://192.168.20.71:3330
+        vue_app_back_api_server: http://back:3650
+    ports:
+      - '3660:80'
+    dns:
+      - 223.6.6.6
+      - 223.5.5.5
+    networks:
+      - portal
 networks:
   portal:
     driver: bridge
