--- a/ue_sale/Dockerfile
+++ b/ue_sale/Dockerfile
@@ -19,6 +19,7 @@ ARG vue_app_back_api_server
 ARG vue_app_user_role
 ARG vue_app_tags
 ARG vue_app_default_tag
+ARG vue_app_worklayer_address
 
 RUN echo VUE_APP_BASE_URL=$vue_app_base_url > .env && \
   echo VUE_APP_LOGIN_KEY_USERNAME=$vue_app_login_key_username >> .env && \
@@ -30,7 +31,8 @@ RUN echo VUE_APP_BASE_URL=$vue_app_base_url > .env && \
   echo VUE_APP_BACK_API_SERVER=$vue_app_back_api_server >> .env && \
   echo VUE_APP_USER_ROLE=$vue_app_user_role >> .env && \
   echo VUE_APP_TAGS=$vue_app_tags >> .env && \
-  echo VUE_APP_DEFAULT_TAG=$vue_app_default_tag >> .env
+  echo VUE_APP_DEFAULT_TAG=$vue_app_default_tag >> .env && \
+  echo VUE_APP_WORKLAYER_ADDRESS=$vue_app_worklayer_address >> .env
 
 RUN cnpm i && yarn build.lib
 
