更新编辑组件为插件形式

--- a/ue_sale/.env
+++ b/ue_sale/.env
@@ -10,7 +10,7 @@ VUE_APP_USER_ROLE=sale
 #VUE_APP_DEFAULT_TAG='list'
 
 # doc editor 
-VUE_APP_PLUGINS_DOCEDITOR_MODIFY=['defineAuditStatus', 'fillingZero']
+VUE_APP_FRONT_DOCEDITOR_MODIFY='fillingZero,defineAuditStatus'
 
 # 仅用于开发环境测试
 VUE_APP_BACK_API_BASE=http://localhost:3730/order/api
